--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,27 +4,16 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#667eea" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Prompt Forge - AI-Powered Prompt Engineering for Text, Image, Video, and Audio generation. Optimize your prompts for GPT-4, Claude, DALL-E, Midjourney, Sora, and more."
     />
+    <meta name="keywords" content="AI, prompt engineering, GPT-4, Claude, DALL-E, Midjourney, Sora, prompt generator, AI tools" />
+    <meta name="author" content="Prompt Forge" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Prompt Forge - AI Prompt Engineering Tool</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
